--- a/index.html
+++ b/index.html
@@ -666,17 +666,7 @@ Data,Loja,Coordenadora,Transporte,Status
                             </div>
                         </div>
                         <div className="flex items-center gap-6">
-                            <div className="hidden md:block text-right">
-                                <div className="text-xs font-semibold text-red-100 uppercase tracking-wider mb-1">Progresso do Mês</div>
-                                <div className="w-40 h-2.5 bg-black/20 rounded-full overflow-hidden backdrop-blur-sm border border-white/10">
-                                    <div className="h-full bg-white shadow-[0_0_10px_rgba(255,255,255,0.5)] transition-all duration-700 ease-out" style={{ width: `${progress}%` }}></div>
-                                </div>
-                                <div className="text-xs text-red-100 mt-1.5 font-medium text-right">{scheduledCount} de {stores.length} lojas</div>
-                            </div>
                             <div className="flex gap-3">
-                                <button onClick={exportCSV} className="flex items-center gap-2 px-4 py-2 bg-white/10 hover:bg-white/20 text-white border border-white/30 rounded-lg transition-all text-sm font-semibold backdrop-blur-sm shadow-sm hover:shadow-md active:scale-95">
-                                    <Upload className="rotate-180" size={18} /> CSV
-                                </button>
                                 <button onClick={handleExportPDF} className="flex items-center gap-2 px-4 py-2 bg-white text-red-900 hover:bg-red-50 rounded-lg transition-all text-sm font-bold shadow-md hover:shadow-lg hover:-translate-y-0.5 active:translate-y-0">
                                     <Printer size={18} /> Exportar PDF
                                 </button>
@@ -685,7 +675,7 @@ Data,Loja,Coordenadora,Transporte,Status
                     </header>
 
                     <div className="flex-1 flex flex-col md:flex-row overflow-hidden">
-                        <aside className="w-full md:w-[240px] bg-white border-r border-gray-200 flex flex-col h-full shrink-0 z-20 shadow-sm md:shadow-none">
+                        <aside className="w-full md:w-[280px] bg-white border-r border-gray-200 flex flex-col h-full shrink-0 z-20 shadow-sm md:shadow-none">
                             <div className="p-4 border-b border-gray-100 space-y-4 bg-white shrink-0">
                                 <div className="relative">
                                     <Search className="absolute left-4 top-3.5 text-gray-400" size={20} />
@@ -807,11 +797,11 @@ Data,Loja,Coordenadora,Transporte,Status
                                         const isToday = new Date().toDateString() === new Date(year, month, day).toDateString();
                                         const isTarget = !!selectedStoreId;
                                         return (
-                                            <div key={day} onClick={() => handleDateClick(day)} className={`relative border-r border-b border-gray-300 p-1 md:p-2 min-h-[120px] transition-colors ${isTarget ? 'cursor-pointer hover:bg-red-50 hover:ring-inset hover:ring-2 hover:ring-red-800' : ''} ${isToday ? 'bg-red-900/5' : ''}`}>
-                                                <div className="flex justify-between items-start mb-1">
-                                                    <span className={`text-sm font-bold w-6 h-6 flex items-center justify-center rounded-full ${isToday ? 'bg-red-800 text-white shadow-md' : 'text-gray-700'}`}>{day}</span>
+                                            <div key={day} onClick={() => handleDateClick(day)} className={`relative border-r border-b border-gray-300 p-1 md:p-1 min-h-[110px] flex flex-col gap-1 transition-colors ${isTarget ? 'cursor-pointer hover:bg-red-50 hover:ring-inset hover:ring-2 hover:ring-red-800' : ''} ${isToday ? 'bg-red-900/5' : ''}`}>
+                                                <div className="flex justify-between items-start">
+                                                    <span className={`text-xs font-bold w-5 h-5 flex items-center justify-center rounded-full ${isToday ? 'bg-red-800 text-white shadow-md' : 'text-gray-700'}`}>{day}</span>
                                                 </div>
-                                                <div className="space-y-1">
+                                                <div className="flex-1 flex flex-col gap-1 w-full">
                                                     {dayAssignments.map((assign, idx) => {
                                                         const store = filteredStores.find(s => s.id === assign.storeId);
                                                         if (!store) return null;
@@ -819,12 +809,12 @@ Data,Loja,Coordenadora,Transporte,Status
                                                         const isAssignSelected = selectedStoreId === store.id;
                                                         const isCompleted = assign.completed;
                                                         return (
-                                                            <div key={idx} onClick={(e) => { e.stopPropagation(); setSelectedStoreId(store.id); setSelectedTransport(assign.transport); }} title={`Coordenadora: ${store.coordinator} | Transporte: ${getTransportLabel(assign.transport)}\nBalanço: ${store.stats?.lastBalance || '-'}`} className={`text-[10px] p-1.5 rounded-md border shadow-sm relative group cursor-pointer transition-all flex flex-col items-center text-center leading-tight ${isCompleted ? 'bg-green-700 text-white border-green-800 ring-1 ring-green-600' : `${coordColor} ${isAssignSelected ? 'ring-2 ring-red-800 shadow-lg scale-105 z-10' : 'hover:scale-105 hover:shadow-md'}`}`}>
-                                                                <span className="font-bold w-full break-words">{store.name.replace('LOJA ', '')}</span>
-                                                                <span className={`mt-0.5 opacity-90 ${isCompleted ? 'text-green-200' : 'text-slate-600'}`}>{getTransportIcon(assign.transport || 'car', 12)}</span>
+                                                            <div key={idx} onClick={(e) => { e.stopPropagation(); setSelectedStoreId(store.id); setSelectedTransport(assign.transport); }} title={`Coordenadora: ${store.coordinator} | Transporte: ${getTransportLabel(assign.transport)}\nBalanço: ${store.stats?.lastBalance || '-'}`} className={`text-[9px] p-1 rounded border shadow-sm relative group cursor-pointer transition-all flex flex-col items-center text-center leading-tight w-full ${isCompleted ? 'bg-green-700 text-white border-green-800 ring-1 ring-green-600' : `${coordColor} ${isAssignSelected ? 'ring-2 ring-red-800 shadow-lg scale-105 z-10' : 'hover:scale-105 hover:shadow-md'}`}`}>
+                                                                <span className="font-bold w-full break-words line-clamp-2">{store.name.replace('LOJA ', '')}</span>
+                                                                <span className={`mt-0.5 opacity-90 ${isCompleted ? 'text-green-200' : 'text-slate-600'}`}>{getTransportIcon(assign.transport || 'car', 10)}</span>
                                                                 <div className="absolute top-0 right-0 flex opacity-0 group-hover:opacity-100 transition-opacity bg-white/95 rounded-bl-lg shadow-sm border-l border-b border-gray-200">
-                                                                    <button onClick={(e) => { e.stopPropagation(); toggleCompletion(store.id); }} className={`p-1 hover:bg-green-100 rounded-bl-lg ${isCompleted ? 'text-green-600' : 'text-gray-400 hover:text-green-600'}`} title={isCompleted ? "Desmarcar" : "Marcar como Concluído"}><Check size={12} strokeWidth={3} /></button>
-                                                                    <button onClick={(e) => { e.stopPropagation(); removeAssignment(store.id); }} className="p-1 text-red-400 hover:text-red-600 hover:bg-red-50" title="Remover"><X size={12} /></button>
+                                                                    <button onClick={(e) => { e.stopPropagation(); toggleCompletion(store.id); }} className={`p-1 hover:bg-green-100 rounded-bl-lg ${isCompleted ? 'text-green-600' : 'text-gray-400 hover:text-green-600'}`} title={isCompleted ? "Desmarcar" : "Marcar como Concluído"}><Check size={10} strokeWidth={3} /></button>
+                                                                    <button onClick={(e) => { e.stopPropagation(); removeAssignment(store.id); }} className="p-1 text-red-400 hover:text-red-600 hover:bg-red-50" title="Remover"><X size={10} /></button>
                                                                 </div>
                                                             </div>
                                                         );
